modify the color

--- a/index.html
+++ b/index.html
@@ -3,94 +3,97 @@
         <title>Demo Page</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles/main.css">
-        <style>
-
-        </style>
     </head>
     <body style="font-family:arial">
         <!-- Add your site or application content here -->
-        <div>
-          <p>
-          <image style="position:relative;height:75px; width:150px; left:100px" src="images/logo.png" ></image>
-          <ul style="list-style-type:none">
-            <li style="float:left;padding:8px 20px;position:relative;left:220px;top: -85px;font-size:20px;color:white"><a style="text-decoration:none" href=""><font color=gray>Home</font></a></li>
-            <li style="float:left;padding:8px 20px;position:relative;left:220px;top: -85px;font-size:20px;color:white"><a style="text-decoration:none" href=""><font color=gray>Apply As Tutor</font></a></li>
-            <li style="float:left;padding:8px 20px;position:relative;left:220px;top: -85px;font-size:20px;color:white"><a style="text-decoration:none" href=""><font color=gray>How It Works</font></a></li>
-            <li style="float:left;padding:8px 20px;position:relative;left:220px;top: -85px;font-size:20px;color:white"><a  style="text-decoration:none"href=""><font color=gray>Why Education</font></a></li>
-            <li style="float:left;padding:8px 20px;position:relative;left:220px;top: -85px;font-size:20px;color:white"><a style="text-decoration:none" href=""><font color=gray>About Us</a></font></li>
-            <li style="float:left;padding:8px 20px;position:relative;left:220px;top: -85px;font-size:20px;color:white"><a style="text-decoration:none" href=""><font color=gray>Sign In</a></font></li>
-          </ul>
-         <button style="position:relative;left:220px;top :-85px;height:35px; width:150px;background:#FFFFFF;font-size:20px" type="button" >Donate</button>
-       </p>
+        <div class="div_head">
+          <div>
+            <image class="image_logo" src="images/logo.png" ></image>
+          </div>
+
+          <div>
+             <ul style="list-style-type:none" >
+              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>Home</font></a></li>
+              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>Apply As Tutor</font></a></li>
+              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>How It Works</font></a></li>
+              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>Why Education</font></a></li>
+              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>About Us</a></font></li>
+              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>Sign In</a></font></li>
+            </ul>
+          </div>
+          <div>
+             <button class="button_donate" type="button" >Donate</button>
+          </div>
         </div>
         <div class= "hero">
-            <h1 style="color:white">ONLINE TUTORING. ARE ALWAYS FREE AND AVAILABLE.</h1>
+            <h1  class ="hero_h1">ONLINE TUTORING. ARE ALWAYS FREE AND AVAILABLE.</h1>
             <div>
-              <button  style="font-size:20px; width:15%; height:50px; backgroud-color=#FFFFFF;position:relative;bottom:410px;color:white" type="button">I'am student</button>
-              <button  style="font-size:20px; width:15%; height:50px; backgroud-color=#E8E8E; position:relative;bottom:410px;color:white" type="button">I'am totur</button>
+              <button  class="button_student" type="button">I'am student</button>
+              <button  class ="button_tutor"  type="button">I'am totur</button>
             </div>
         </div>
-        <div></div>
         <div class="div1">
-          <p style="position:relative;font-size:20px; width:15%; height:50px;position:relative;bottom:-80px;left:600px"> Mission</p>
-          <article class="article" style="position:relative;margin: 2cm 3cm 4cm 10cm">
+          <p class="div1_p"> Mission</p>
+          <article class="div1_article" >
             The learn to be found is on a mission to provide 100% free, 1-on-1, onlint tutoring to students everywhere.
           </article>
-          <button style="font-size:20px; width:15%; height:50px; background-color:#FF9933; position:relative;bottom:110px;left:-10px;border:0" type="button" >Donate</button>
+          <button  class="div1_button" type="button" >Donate</button>
 
         </div>
-        <div class="div2" style="background-color:#66FFCC">
-          <image src="images/1.png" style="width:250px; height:250px;position:relative; left:300px; top:150px"></image>
+        <div class="div2" >
+          <image class= "div2_image" src="images/1.png" ></image>
           <div>
-            <p style="text-align:center;position:relative; left:100px; top:-90px;font-size:relative-size;font-size:50px;color:white">STUDENTS</p>
-            <section style="position:relative;margin: -3cm 9cm 4cm 18cm;color:white">
+            <p class= "div2_p" >STUDENTS</p>
+            <section class= "div2_section">
               We offter students 100% free online tutoring almost 24 hours a day.Struggleing with homework problem?Don't understand a concept you sre learning?Don't worry,we will got you.
             </section>
-            <button style="position:relative; left:700px; top:-130px;width:18%; height:50px;font-size:20px;color:white;background:#33FFCC;border:0">Start Learning</button>
-            <ul style="position:relative; left:1100px; top:-280px;color:white">
+            <button class= "div2_button" >Start Learning</button>
+            <ul class= "div2_ul">
               <li></li>
-              <li style=“color:green;content:.”></li>
-              <li style=“color:#339966”></li>
+              <li></li>
+              <li></li>
             </ul>
           </div>
         </div>
         <div class="div3">
-          <div>
-            <p style="text-align:center;position:relative; left:10px; top:100px;font-size:relative-size;font-size:50px;color:white">PROSPECTIVE TUTORS</p>
-            <section style="margin: 4cm 16cm 4cm 12cm;color:white">
+          <div class="div3_1" >
+            <p class="div3_P">PROSPECTIVE TUTORS</p>
+            <section class="div3_section" style="margin: 4cm 30cm 4cm 0cm;color:white">
               Join our team of over 600 tutors who are dedacated to providing individunlized to students around the world.Tutor at your convienceand make your a real import.
             </section>
-            <button style="position:relative; left:450px; top:-40px;width:18%; height:50px;font-size:20px;color:white;background:#FF9933;border:0">Join Us</button>
+            <button class="div3_button" >Join Us</button>
           </div>
-          <image src="images/2.png" style="width:250px; height:250px;position:relative; left:900px; top:-300px"></image>
+          <div display:inline>
+            <image src="images/2.png" class="div3_image"></image>
+          </div>
         </div>
         <div class="div4">
-          <image src="images/3.png" style="width:250px; height:250px;position:relative; left:300px; top:150px"></image>
+          <image src="images/3.png" class="div4_image"></image>
           <div>
-            <p style="text-align:center;position:relative; left:10px; top:-180px;font-size:relative-size;font-size:50px;color:white">PARTNERS</p>
-            <section style="position:relative;margin: -5cm 12cm 2cm 16cm;color:white">We are dedicated to partnering with schools and orgnazitions that help to further our mission of providing individualized online tutoringto kids living in the understand comunity.</section>
-            <button style="position:relative; left:600px; top:-40px;width:18%; height:50px;font-size:20px;color:white;background:#3399FF;border:0">Help Us</button>
+            <p class="div4_P">PARTNERS</p>
+            <section class="div4_section">We are dedicated to partnering with schools and orgnazitions that help to further our mission of providing individualized online tutoringto kids living in the understand comunity.</section>
+            <button class="div4_button">Help Us</button>
           </div>
         </div>
         <div class="div5">
-          <p style="text-align:center;position:relative; left:10px; top:-10px;font-size:relative-size;font-size:50px;color:black">OUR PROGRESS</p>
+          <p class="div_p">OUR PROGRESS</p>
           <div>
-            <div style="position:relative;left:250px;top:20px;width:200px;height:200px;border:1px solid #000">
-              <p style="text-align:center;position:relative; left:5px; top:15px; color:#66FFCC;font-size:40px">13,000</p>
+            <div class="div5_1">
+              <p class = "div5_p1_1">13,000</p>
 
-              <p style="text-align:center;position:relative; left:5px; top:10px; color:#66FFCC;font-size:20px">Hours Tutored</p>
+              <p class = "div5_p2_1">Hours Tutored</p>
             </div>
 
-            <div style="position:relative;left:550px;top:-180px;width:200px;height:200px;border:1px solid #000">
-              <p style="text-align:center;position:relative; left:5px; top:15px; color:#FFCC33;font-size:40px">25,000</p>
+            <div class="div5_2">
+              <p class = "div5_p1_2">25,000</p>
 
-              <p style="text-align:center;position:relative; left:5px; top:10px; color:#FFCC33;font-size:20px">Sessions Hosted</p>
+              <p class = "div5_p2_2">Sessions Hosted</p>
 
             </div>
-            <div style="position:relative;left:850px;top:-385px;width:200px;height:200px;border:1px solid #000">
-              <p style="text-align:center;position:relative; left:5px; top:15px; color:#33CCFF;font-size:40px">600</p>
+            <div class="div5_3">
+              <p class = "div5_p1_3">600</p>
 
-              <p style="text-align:center;position:relative; left:5px; top:10px; color:#33CCFF;font-size:20px">Volunteers Tutors</p>
+              <p class = "div5_p2_3">Volunteers Tutors</p>
             </div>
           </div>
         </div>
