--- a/index.html
+++ b/index.html
@@ -5,34 +5,37 @@
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body style="font-family:arial">
-        <!-- Add your site or application content here -->
         <div class="div_head">
           <div>
             <image class="image_logo" src="images/logo.png" ></image>
           </div>
 
-          <div>
+          <div style="display:inline">
+            <!-- <p style="border:1px solid gray;height:75px;width:1px;display:inline;position:relative;left:500px"> </p> -->
              <ul style="list-style-type:none" >
-              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>Home</font></a></li>
-              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>Apply As Tutor</font></a></li>
-              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>How It Works</font></a></li>
-              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>Why Education</font></a></li>
-              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>About Us</a></font></li>
-              <li class="head_li"><a style="text-decoration:none" href=""><font color=gray>Sign In</a></font></li>
+              <li class="head_li"><a  href="">Home</a></li>
+              <li class="head_li"><a  href=""> Apply As Tutor</a></li>
+              <li class="head_li"><a  href=""> How It Works</a></li>
+              <li class="head_li"><a href=""> Why Education</a></li>
+              <li class="head_li"><a  href=""> About Us</a></li>
+              <li class="head_li"><a  href=""> Sign In</a></li>
             </ul>
+          <!-- <p></p> -->
           </div>
           <div>
              <button class="button_donate" type="button" >Donate</button>
           </div>
         </div>
+        <div class="content">
         <div class= "hero">
-            <h1  class ="hero_h1">ONLINE TUTORING. ARE ALWAYS FREE AND AVAILABLE.</h1>
+            <p  class ="hero_h1">ONLINE TUTORING. ARE ALWAYS FREE AND AVAILABLE.</p>
             <div>
               <button  class="button_student" type="button">I'am student</button>
               <button  class ="button_tutor"  type="button">I'am totur</button>
             </div>
         </div>
-        <div class="div1">
+
+         <div class="div1">
           <p class="div1_p"> Mission</p>
           <article class="div1_article" >
             The learn to be found is on a mission to provide 100% free, 1-on-1, onlint tutoring to students everywhere.
@@ -76,8 +79,7 @@
           </div>
         </div>
         <div class="div5">
-          <p class="div_p">OUR PROGRESS</p>
-          <div>
+          <p class="div5_p">OUR PROGRESS</p>
             <div class="div5_1">
               <p class = "div5_p1_1">13,000</p>
 
@@ -95,8 +97,8 @@
 
               <p class = "div5_p2_3">Volunteers Tutors</p>
             </div>
-          </div>
         </div>
+      </div>
     </body>
     <footer class="footer">@learn to be 2014</footer>
 </html>
