--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Demo Page</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     </head>
     <body style="font-family:arial">
         <div class="div_head">
@@ -51,28 +52,30 @@
               We offter students 100% free online tutoring almost 24 hours a day.Struggleing with homework problem?Don't understand a concept you sre learning?Don't worry,we will got you.
             </section>
             <button class= "div2_button" >Start Learning</button>
-            <ul class= "div2_ul">
+            <!-- <ul class= "div2_ul">
               <li></li>
               <li></li>
               <li></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
         <div class="div3">
           <div class="div3_1" >
             <p class="div3_P">PROSPECTIVE TUTORS</p>
-            <section class="div3_section" style="margin: 4cm 30cm 4cm 0cm;color:white">
+            <section class="div3_section">
               Join our team of over 600 tutors who are dedacated to providing individunlized to students around the world.Tutor at your convienceand make your a real import.
             </section>
             <button class="div3_button" >Join Us</button>
           </div>
-          <div display:inline>
-            <image src="images/2.png" class="div3_image"></image>
+          <div class="div3_image">
+            <image src="images/2.png" class="div3_image2"></image>
           </div>
         </div>
         <div class="div4">
-          <image src="images/3.png" class="div4_image"></image>
-          <div>
+          <div class="div4_image">
+          <image src="images/3.png" class="div4_image2"></image>
+          </div>
+          <div class="div4_1">
             <p class="div4_P">PARTNERS</p>
             <section class="div4_section">We are dedicated to partnering with schools and orgnazitions that help to further our mission of providing individualized online tutoringto kids living in the understand comunity.</section>
             <button class="div4_button">Help Us</button>
